@@ -46,18 +46,21 @@
   <version>4.5.1</version>
 </dependency>
   	</dependencies>
- <build>
- <plugins>
-	 <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M3</version>
-        <configuration>
-            <suiteXmlFiles>
-                <suiteXmlFile>testng.xml</suiteXmlFile>
-            </suiteXmlFiles>
-        </configuration>
-    </plugin>
- </plugins>
- </build>
+ <properties>
+     <jvm.options>--add-opens java.base/java.lang=ALL-UNNAMED</jvm.options>
+    </properties>
+
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+					<testFailureIgnore>true</testFailureIgnore>
+                    <argLine>${jvm.options}</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
